Bug 70049 - Expert Config cannot save boolean values
Summary: Expert Config cannot save boolean values
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
4.2.0.0.alpha0+ Master
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Efe Gürkan YALAMAN
URL:
Whiteboard: target:4.2.0
Keywords:
Depends on:
Blocks:
 
Reported: 2013-10-02 18:46 UTC by Stanislav Horacek
Modified: 2013-10-30 15:58 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Stanislav Horacek 2013-10-02 18:46:41 UTC
Steps to reproduce:
1. Choose Tools - Options - LibreOfficeDev - Expert Config.
2. Select the first line, i.e. property "Visible" of "/org.openoffice.FirstStartWizard..." preference. Its type is boolean and value is true.
3. Click the Edit button. The value of the first preference is changed to false.
4. Click OK.
5. Choose again Tools - Options - LibreOfficeDev - Expert Config.
The value of the first preference is true.

Expected:
The value should remain false.

OS: Ubuntu 13.04
Comment 1 Stanislav Horacek 2013-10-27 16:24:27 UTC
It still persists in current master.

Efe, could you please look at this?
Comment 2 Efe Gürkan YALAMAN 2013-10-27 23:44:00 UTC
Hi,

Sorry for the delay. I submitted a patch which solves the problem.

Best,
Comment 3 Commit Notification 2013-10-29 12:01:27 UTC
Efe Gürkan YALAMAN committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=f87f5c829e612d333ddff892752693b2835cec19

fdo#70049 Expert Config page cannot save boolean



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 4 Stanislav Horacek 2013-10-30 15:58:36 UTC
Now it works as expected, marking as verified; thanks for the fix! (And big thank you for Expert Config at all - it is a very nice feature and it will be perfect after adding some searching...)