fdo#70049 Expert Config page cannot save boolean

This patch fixes unsaveable booleans. Also fix the problem occurs when there is
multiple changes on page. Page was commiting only last added one, now
commits all.

Change-Id: Id1a15634e95d5ca9d54e7a90fa1bbbaf874e3f08